2009-06-11  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix build-chain when headers are in non-standard directories.
	* src/Makefile.am,
	* tests/Makefile.am: Add ROBOPTIMCORE_CFLAGS to CPPFLAGS.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* doc/sf-upload.sh.in: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize with share.
	* build-aux/boost.m4: New.
	* build-aux/deb.mk: New.
	* build-aux/doxygen.m4: New.
	* build-aux/ebuild.mk: New.
	* build-aux/init.mk: Synchronize.
	* build-aux/move-if-change: New.
	* build-aux/pkg-config.mk: New.
	* build-aux/pkg-config.pc.in: New.
	* build-aux/rpm.mk: New.
	* configure.ac: Synchronize.
	* doc/Doxyfile.in: Synchronize.
	* doc/Makefile.am: Synchronize.
	* doc/sf-upload.sh.in: Synchronize.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Document.
	* include/roboptim/core/plugin/cfsqp.hh: Document.
	* src/doc.hh: Add module definition.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Update to new interface.
	* src/roboptim-core-cfsqp-plugin.cc,
	* tests/hs071.hh,
	* tests/optimization-problem-1.cc:
	Update to new interface and fix a bug in hs071
	problem definition.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove pkg.m4.
	* build-aux/pkg.m4: Remove.

2009-06-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Make Libtool support more robust, link against roboptim-core.
	* .gitignore: Remove committed file from ignore list.
	* Makefile.am: Add libtool related rules.
	* build-aux/bootstrap: Remove force flag from autoreconf call.
	* build-aux/config.guess: New.
	* build-aux/config.sub: New.
	* build-aux/depcomp: New.
	* build-aux/install-sh: New.
	* build-aux/libtool.m4: New.
	* build-aux/ltmain.sh: New.
	* build-aux/ltoptions.m4: New.
	* build-aux/ltsugar.m4: New.
	* build-aux/ltversion.m4: New.
	* build-aux/lt~obsolete.m4: New.
	* build-aux/missing: New.