@@ -27,11 +27,9 @@
 int run_test ()
 {
   F f;
-  G0 g0;
-  G1 g1;
 
   CFSQPSolver::problem_t pb (f);
-  initialize_problem (pb, g0, g1);
+  initialize_problem (pb);
 
   // Initialize solver
   CFSQPSolver solver (pb);
