@@ -1,3 +1,14 @@
+2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Use new constraint system.
+	* include/roboptim/core/plugin/cfsqp.hh,
+	* src/roboptim-core-cfsqp-plugin.cc,
+	* tests/hs071.hh,
+	* tests/optimization-problem-1.cc,
+	* tests/plugin.cc,
+	* tests/simple.cc: Use new generic constraint
+	system.
+
 2009-06-11  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Fix build-chain when headers are in non-standard directories.
